# AdventOfCode2022

./: CMakeLists.txt
source/: Source.cpp  advent.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day21.cpp  day21a.cpp  day21b.cpp  helper.txt  myres.csv  parser.cpp  parser.h
