cmake_minimum_required(VERSION 3.23)
project(AOC22)

set(CMAKE_CXX_STANDARD 20)

add_executable(AOC22
        source/Source.cpp
        source/parser.cpp
        source/parser.cpp
        source/day01.cpp
        source/day02.cpp
        source/day03.cpp
        source/day04.cpp
        source/day05.cpp
        source/day06.cpp
        source/day07.cpp
        source/day08.cpp
        source/day09.cpp
        source/day10.cpp
        source/day11.cpp
        source/day12.cpp
        source/day13.cpp
        source/day21a.cpp
        source/day21b.cpp
        source/advent.h)
